--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e"
+    "test:e2e": "vue-cli-service test:e2e",
+
+    "dev": "node build/dev-server.js",
+    "build": "rimraf dist && mkdirp dist && ncp static dist/static && cross-env NODE_ENV=production webpack — progress — hide-modules — config build/webpack.prod.conf.js",
+    "postinstall": "npm run build",
+    "start": "node server.js"
+
   },
   "dependencies": {
     "@svg-maps/world": "^1.0.1",
@@ -26,3 +31,5 @@
     "vue-template-compiler": "^2.6.11"
   }
 }
+
+
