--- a/client/package.json
+++ b/client/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "dev": "node build/dev-server.js",
     "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
     "start": "node server.js"
   },
   "dependencies": {
     "@svg-maps/world": "^1.0.1",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "panzoom": "^9.4.0",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.11",
     "vue-panzoom": "^1.1.3",
     "vue-scrollto": "^2.20.0",
